microsoft-teams/1.0/modules/ROOT/pages/microsoft-teams-connector-reference.adoc
= Microsoft Teams Connector 1.0 Reference - Mule 4

Anypoint Connector for Microsoft Teams (Microsoft Teams Connector) gives you access to the Microsoft Teams APIs.

== Configurations

[[AuthorizationCodeConfig]]
=== Authorization Code Config

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*
| Connection a| <<AuthorizationCodeConfig_OauthAuthorizationCode, OAuth v2.0 Authorization Code>>
 | The connection types that can be provided to this configuration. | | *x*
| Name a| String |  The identifier of this element used to reference it in other components |  | *x*
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer will wait for a response before it times out. |  60 |
| Read Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  SECONDS |
|===

=== Connection Types

[[AuthorizationCodeConfig_OauthAuthorizationCode]]
=== OAuth 2.0 Authorization Code

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy configuration a| <<ProxyConfiguration>> |  Proxy configuration for the connector. |  |
| Response Type a| String |  Specifies the method to use to send the resulting token back to your app. It must be `query`.|  query |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the keystore in the `tls:context` child element of the `listener-config`.  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String | OAuth consumerKey as registered with the service provider |  | *x*
| Consumer Secret a| String | OAuth consumerSecret as registered with the service provider |  | *x*
| Authorization Url a| String |  The service provider's authorization endpoint URL |  `+https://login.microsoftonline.com/{tenant}/oauth2/v2.0/authorize+` |
| Access Token Url a| String |  The service provider's accessToken endpoint URL |  `+https://login.microsoftonline.com/{tenant}/oauth2/v2.0/token+` |
| Scopes a| String |  The OAuth scopes to request during the OAuth dance. If not provided, this value defaults to those in the annotation. |  |
| Resource Owner Id a| String |  The resourceOwnerId that each component should use if it is not otherwise referenced.  |  |
| Before a| String | Name of a flow to execute immediately before starting the OAuth dance. |  |
| After a| String |  Name of a flow to execute immediately after an accessToken is received. |  |
| Listener Config a| String |  A reference to a `<http:listener-config />` to use to create the listener that receives the access token callback endpoint. |  | *x*
| Callback Path a| String |  Path of the access token callback endpoint. |  | *x*
| Authorize Path a| String | Path of the local HTTP endpoint that triggers the OAuth dance. |  | *x*
| External Callback Url a| String |  If the callback endpoint is behind a proxy or must be accessed through a non direct URL, use this parameter to tell the OAuth provider the URL to use to access the callback. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

==== Associated Operations

* <<AddChannelMember>>
* <<AddGroupMembers>>
* <<AddTeamMember>>
* <<CreateChannel>>
* <<CreateMessage>>
* <<CreateTeam>>
* <<DeleteChannel>>
* <<DeleteTeam>>
* <<GetChannel>>
* <<GetTeam>>
* <<ListChannelMembers>>
* <<ListChannels>>
* <<ListGroupMembers>>
* <<ListTeamMembers>>
* <<RemoveChannelMember>>
* <<RemoveGroupMember>>
* <<RemoveTeamMember>>
* <<Unauthorize>>
* <<UpdateChannel>>
* <<UpdateTeam>>


[[ClientCredentialsConfig]]
=== Client Credentials Config

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*
| Connection a| <<ClientCredentialsConfig_OauthClientCredentials, OAuth v2.0 Client Credentials>>
 | The supported connection types for this configuration. | | *x*
| Name a| String |  The identifier of this element that other components use to reference it. |  | *x*
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer waits for a response before it times out. |  60 |
| Read Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  SECONDS |
|===

=== Connection Types
[[ClientCredentialsConfig_OauthClientCredentials]]
=== OAuth 2.0 Client Credentials


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy configuration a| <<ProxyConfiguration>> |  Proxy configuration for the connector. |  |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the keystore in the `tls:context` child element of the `listener-config`. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Client Id a| String |  OAuth client ID as registered with the service provider. |  | *x*
| Client Secret a| String |  OAuth client secret as registered with the service provider. |  | *x*
| Token Url a| String |  The service provider's token endpoint URL. |  `+https://login.microsoftonline.com/{tenant}/oauth2/v2.0/token+` |
| Scopes a| String |  OAuth scopes to request during the OAuth dance. If not provided, the value defaults to those in the annotation. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

==== Associated Operations
* <<AddChannelMember>>
* <<AddGroupMembers>>
* <<AddTeamMember>>
* <<CreateChannel>>
* <<CreateTeam>>
* <<DeleteChannel>>
* <<DeleteTeam>>
* <<GetChannel>>
* <<GetTeam>>
* <<ListChannelMembers>>
* <<ListChannels>>
* <<ListGroupMembers>>
* <<ListTeamMembers>>
* <<RemoveChannelMember>>
* <<RemoveGroupMember>>
* <<RemoveTeamMember>>
* <<Unauthorize>>
* <<UpdateChannel>>
* <<UpdateTeam>>



== Operations

[[AddChannelMember]]
== Add Channel Member
`<microsoftTeams:add-channel-member>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team Id a| String |  Team Id that has a channel with the Id specified in Channel Id parameter |  | *x*
| Channel Id a| String |  The channel id where the user should be added |  | *x*
| User Id a| String |  Corresponding user id to be added as member |  | *x*
| Owner a| Boolean |  True if this user should be the owner of the channel. |  false |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[AddGroupMembers]]
== Add Group Members
`<microsoftTeams:add-group-members>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Group Id a| String |  Group id where the members should be added |  | *x*
| Member Ids a| Array of String |  A list of user IDs to add as members in the specified group. |  #[payload] |
| Read Timeout a| Number |  Read Timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[AddTeamMember]]
== Add Team Member
`<microsoftTeams:add-team-member>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team Id a| String |  Team Id where the user should be added |  | *x*
| User Id a| String |  User ID of the user to add as a member of the specified team.  |  | *x*
| Owner a| Boolean | Set to `true` to designate the user as the owner of the team. |  false |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[CreateChannel]]
== Create Channel
`<microsoftTeams:create-channel>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team id a| String |  Team Id where the channel should be created |  | *x*
| Attributes a| Object |  Information regarding the channel to be created |  #[payload] |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[CreateMessage]]
== Create Message
`<microsoftTeams:create-message>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team id a| String |  Team Id where the channel is present |  | *x*
| Channel id a| String |  Channel Id where the message should be published |  | *x*
| Message a| Object |  The message to be published |  #[payload] |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[CreateTeam]]
== Create Team
`<microsoftTeams:create-team>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Attributes a| Object |  Information regarding the team to be created |  #[payload] |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[DeleteChannel]]
== Delete Channel
`<microsoftTeams:delete-channel>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team id a| String |  Team Id where the channel is present |  | *x*
| Channel id a| String |  Channel id to be deleted |  | *x*
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT

[[DeleteTeam]]
== Delete Team
`<microsoftTeams:delete-team>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team Id a| String |  Team id to be removed |  | *x*
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[GetChannel]]
== Get Channel
`<microsoftTeams:get-channel>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team id a| String |  Team Id where the channel is present |  | *x*
| Channel id a| String |  Channel Id to be retrieved |  | *x*
| Select a| String |  Properties to be retrieved in the response |   |
| Expand a| String |  The response will include information regarding the specified relationship |   |
| Filter a| String |  Use the filter query parameter to retrieve just a subset of a collection. |   |
| Advanced Query Params a| Object |  |  |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[GetTeam]]
== Get Team
`<microsoftTeams:get-team>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team id a| String |  Team Id to be retrieved |  | *x*
| Select a| String |  Properties to be retrieved in the response |   |
| Expand a| String |  The response will include information regarding the specified relationship |   |
| Advanced Query Params a| Object |  |  |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[ListChannelMembers]]
== List Channel Members
`<microsoftTeams:list-channel-members>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team Id a| String |  Team Id where the channel is present |  | *x*
| Channel Id a| String |  Channel Id to list its members |  | *x*
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[ListChannels]]
== List Channels
`<microsoftTeams:list-channels>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team Id a| String |  Team Id to list its channels |  | *x*
| Select a| String |  Properties to be retrieved in the response |   |
| Filter a| String |  Use the filter query parameter to retrieve just a subset of a collection. |   |
| Advanced Query Params a| Object |  |  |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[ListGroupMembers]]
== List Group Members
`<microsoftTeams:list-group-members>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Group Id a| String |  Group id to list its members |  | *x*
| Select a| String |  Properties to be retrieved in the response |   |
| Expand a| String |  The response will include information regarding the specified relationship |   |
| Filter a| String |  Use the filter query parameter to retrieve just a subset of a collection. |   |
| Order By a| String |  Use the orderby parameter to specify the sort order of the items returned |   |
| Search a| String |  Use the search parameter to restrict the results of a request to match a search criterion |   |
| Skip a| Number |  Use the skip parameter to set the number of items to skip at the start of a collection. |  |
| Top a| Number |  Use the top query parameter to specify the page size of the result set. |  |
| Count a| Boolean |  Retrieves the total count of matching resources. |  false |
| Advanced Query Params a| Object |  |  |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Array of Object
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[ListTeamMembers]]
== List Team Members
`<microsoftTeams:list-team-members>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team id a| String |  Team Id to list its members |  | *x*
| Select a| String |  Properties to be retrieved in the response |   |
| Filter a| String |  |  |
| Advanced Query Params a| Object |  |  |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[RemoveChannelMember]]
== Remove Channel Member
`<microsoftTeams:remove-channel-member>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team Id a| String |  Team Id where the channel is present |  | *x*
| Channel Id a| String |  Channel Id that contains the member to be removed |  | *x*
| Membership Id a| String |  The id of the member to be deleted |  | *x*
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[RemoveGroupMember]]
== Remove Group Member
`<microsoftTeams:remove-group-member>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Group Id a| String |  Group id where the member to be removed is present |  | *x*
| Member Id a| String |  User id that is member in this group |  | *x*
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[RemoveTeamMember]]
== Remove Team Member
`<microsoftTeams:remove-team-member>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team id a| String |  Team Id that contains the member to be removed |  | *x*
| Membership Id a| String |  The id of the member to be removed |  | *x*
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[Unauthorize]]
== Unauthorize
`<microsoftTeams:unauthorize>`


Deletes all the access token information of a given resource owner id so that it's impossible to execute any operation for that user without doing the authorization dance again


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Resource Owner Id a| String |  The ID of the resource owner for whom to invalidate access.  |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>



[[UpdateChannel]]
== Update Channel
`<microsoftTeams:update-channel>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Team Id a| String |  Team ID where the channel is present |  | *x*
| Channel Id a| String |  Channel Id to be updated |  | *x*
| Attributes a| Object |  Information regarding the channel to be updated |  #[payload] |
| Read Timeout a| Number |  Read timeout value. |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the Read Timeout parameter. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT


[[UpdateTeam]]
== Update Team
`<microsoftTeams:update-team>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | *x*
| Team id a| String |  ID of the team to update |  | *x*
| Attributes a| Object |  Information to update |  #[payload] |
| Read Timeout a| Number |  Read timeout value |  |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit value used by the Read Timeout parameter |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component |  | *x*
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors |  |
|===


=== For Configurations

* <<AuthorizationCodeConfig>>
* <<ClientCredentialsConfig>>

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST
* MICROSOFTTEAMS:CONNECTIVITY
* MICROSOFTTEAMS:FORBIDDEN
* MICROSOFTTEAMS:INVALID_CONNECTION
* MICROSOFTTEAMS:INVALID_CREDENTIALS
* MICROSOFTTEAMS:NOT_FOUND
* MICROSOFTTEAMS:RETRY_EXHAUSTED
* MICROSOFTTEAMS:SERVER_ERROR
* MICROSOFTTEAMS:TIMEOUT



== Types
[[ProxyConfiguration]]
=== Proxy Configuration

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests will be sent. |  | x
| Port a| Number | Port where the proxy requests will be sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
|======================

[[Tls]]
=== Tls

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|======================

[[TrustStore]]
=== Trust Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|======================

[[KeyStore]]
=== Key Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|======================

[[StandardRevocationCheck]]
=== Standard Revocation Check

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|======================

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|======================

[[CrlFile]]
=== Crl File

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|======================

[[Reconnection]]
=== Reconnection

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use |  |
|======================

[[Reconnect]]
=== Reconnect

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in ms) to reconnect |  |
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread |  |
| Count a| Number | How many reconnection attempts to make |  |
|======================

[[ReconnectForever]]
=== Reconnect Forever

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in ms) to reconnect |  |
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread |  |
|======================

[[ExpirationPolicy]]
=== Expiration Policy

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|======================

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of memory that will be allocated in order to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then it will be expanded by according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much will be buffer size by expanded if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|======================

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|======================

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of instances that will be initially be allowed to be kept in memory in order to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then it will be expanded according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much will the buffer size by expanded if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
|======================

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | This is the maximum amount of instances that will be kept in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|======================

== See Also

* https://help.mulesoft.com[MuleSoft Help Center]
