microsoft-teams/1.1/modules/ROOT/pages/microsoft-teams-connector-reference.adoc


= Microsoft Teams Module Connector Reference



== Configurations
---
[[AuthorizationCodeConfig]]
=== Authorization Code Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*{nbsp}
| Connection a| <<AuthorizationCodeConfig_OauthAuthorizationCode, OAuth v2.0 Authorization Code>>
 | The connection types that can be provided to this configuration. | | *x*{nbsp}
| Name a| String |  The identifier of this element used to reference it in other components |  | *x*{nbsp}
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform will expire the instance at the exact moment that it becomes eligible. The runtime will actually purge the instances when it sees it fit. |  | {nbsp}
| Read Timeout a| Number |  Specifies the amount of time, that the consumer will wait for a response before it times out. |  60 | {nbsp}
| Read Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  SECONDS | {nbsp}
|===

==== Connection Types
[[AuthorizationCodeConfig_OauthAuthorizationCode]]
===== OAuth v2.0 Authorization Code


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy configuration a| <<ProxyConfiguration>> |  Proxy configuration for the connector. |  | {nbsp}
| Response Type a| String |  Specifies the method that should be used to send the resulting token back to your app. It must be: query |  query | {nbsp}
| TLS configuration (deprecated) a| <<Tls>> |  If the HTTPS was configured as protocol, then the user needs to configure at least the keystore configuration |  | {nbsp}
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | {nbsp}
| Consumer Key a| String |  The OAuth consumerKey as registered with the service provider |  | *x*{nbsp}
| Consumer Secret a| String |  The OAuth consumerSecret as registered with the service provider |  | *x*{nbsp}
| Authorization Url a| String |  The service provider's authorization endpoint URL |  https://login.microsoftonline.com/{tenant}/oauth2/v2.0/authorize | {nbsp}
| Access Token Url a| String |  The service provider's accessToken endpoint URL |  https://login.microsoftonline.com/{tenant}/oauth2/v2.0/token | {nbsp}
| Scopes a| String |  The OAuth scopes to be requested during the dance. If not provided, it will default to those in the annotation |  | {nbsp}
| Resource Owner Id a| String |  The resourceOwnerId which each component should use if it doesn't reference otherwise. |  | {nbsp}
| Before a| String |  The name of a flow to be executed right before starting the OAuth dance |  | {nbsp}
| After a| String |  The name of a flow to be executed right after an accessToken has been received |  | {nbsp}
| Listener Config a| String |  A reference to a <http:listener-config /> to be used in order to create the listener that will catch the access token callback endpoint. |  | *x*{nbsp}
| Callback Path a| String |  The path of the access token callback endpoint |  | *x*{nbsp}
| Authorize Path a| String |  The path of the local http endpoint which triggers the OAuth dance |  | *x*{nbsp}
| External Callback Url a| String |  If the callback endpoint is behind a proxy or should be accessed through a non direct URL, use this parameter to tell the OAuth provider the URL it should use to access the callback |  | {nbsp}
| Object Store a| String |  A reference to the object store that should be used to store each resource owner id's data. If not specified, runtime will automatically provision the default one. |  | {nbsp}
|===

==== Associated Operations
* <<AddChannelMember>> {nbsp}
* <<AddGroupMembers>> {nbsp}
* <<AddTeamMember>> {nbsp}
* <<CreateChannel>> {nbsp}
* <<CreateMessage>> {nbsp}
* <<CreateTeam>> {nbsp}
* <<DeleteChannel>> {nbsp}
* <<DeleteTeam>> {nbsp}
* <<GetChannel>> {nbsp}
* <<GetTeam>> {nbsp}
* <<ListChannelMembers>> {nbsp}
* <<ListChannels>> {nbsp}
* <<ListGroupMembers>> {nbsp}
* <<ListTeamMembers>> {nbsp}
* <<RemoveChannelMember>> {nbsp}
* <<RemoveGroupMember>> {nbsp}
* <<RemoveTeamMember>> {nbsp}
* <<Unauthorize>> {nbsp}
* <<UpdateChannel>> {nbsp}
* <<UpdateTeam>> {nbsp}


---
[[ClientCredentialsConfig]]
=== Client Credentials Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*{nbsp}
| Connection a| <<ClientCredentialsConfig_OauthClientCredentials, OAuth v2.0 Client Credentials>>
 | The connection types that can be provided to this configuration. | | *x*{nbsp}
| Name a| String |  The identifier of this element used to reference it in other components |  | *x*{nbsp}
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform will expire the instance at the exact moment that it becomes eligible. The runtime will actually purge the instances when it sees it fit. |  | {nbsp}
| Read Timeout a| Number |  Specifies the amount of time, that the consumer will wait for a response before it times out. |  60 | {nbsp}
| Read Timeout Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  SECONDS | {nbsp}
|===

==== Connection Types
[[ClientCredentialsConfig_OauthClientCredentials]]
===== OAuth v2.0 Client Credentials


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy configuration a| <<ProxyConfiguration>> |  Proxy configuration for the connector. |  | {nbsp}
| TLS configuration (deprecated) a| <<Tls>> |  If the HTTPS was configured as protocol, then the user needs to configure at least the keystore configuration |  | {nbsp}
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | {nbsp}
| Client Id a| String |  The OAuth client id as registered with the service provider |  | *x*{nbsp}
| Client Secret a| String |  The OAuth client secret as registered with the service provider |  | *x*{nbsp}
| Token Url a| String |  The service provider's token endpoint URL |  https://login.microsoftonline.com/{tenant}/oauth2/v2.0/token | {nbsp}
| Scopes a| String |  The OAuth scopes to be requested during the dance. If not provided, it will default to those in the annotation |  | {nbsp}
| Object Store a| String |  A reference to the object store that should be used to store each resource owner id's data. If not specified, runtime will automatically provision the default one. |  | {nbsp}
|===

==== Associated Operations
* <<AddChannelMember>> {nbsp}
* <<AddGroupMembers>> {nbsp}
* <<AddTeamMember>> {nbsp}
* <<CreateChannel>> {nbsp}
* <<CreateTeam>> {nbsp}
* <<DeleteChannel>> {nbsp}
* <<DeleteTeam>> {nbsp}
* <<GetChannel>> {nbsp}
* <<GetTeam>> {nbsp}
* <<ListChannelMembers>> {nbsp}
* <<ListChannels>> {nbsp}
* <<ListGroupMembers>> {nbsp}
* <<ListTeamMembers>> {nbsp}
* <<RemoveChannelMember>> {nbsp}
* <<RemoveGroupMember>> {nbsp}
* <<RemoveTeamMember>> {nbsp}
* <<Unauthorize>> {nbsp}
* <<UpdateChannel>> {nbsp}
* <<UpdateTeam>> {nbsp}



== Operations

[[AddChannelMember]]
== Add Channel Member
`<microsoftTeams:add-channel-member>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `ChannelMember.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `ChannelMember.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team Id a| String |  Team Id that has a channel with the Id specified in Channel Id parameter |  | *x*{nbsp}
| Channel Id a| String |  The channel id where the user should be added |  | *x*{nbsp}
| User Id a| String |  Corresponding user id to be added as member |  | *x*{nbsp}
| Owner a| Boolean |  True if this user should be the owner of the channel. |  false | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[AddGroupMembers]]
== Add Group Members
`<microsoftTeams:add-group-members>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `GroupMember.ReadWrite.All, Group.ReadWrite.All, Directory.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `GroupMember.ReadWrite.All, Group.ReadWrite.All and Directory.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Group Id a| String |  Group id where the members should be added |  | *x*{nbsp}
| Member Ids a| Array of String |  A list of user ids that should be added as members in the specified group |  #[payload] | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[AddTeamMember]]
== Add Team Member
`<microsoftTeams:add-team-member>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `TeamMember.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `TeamMember.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team Id a| String |  Team Id where the user should be added |  | *x*{nbsp}
| User Id a| String |  User id that should be added as member in this team |  | *x*{nbsp}
| Owner a| Boolean |  True if this user should be the owner of the team. |  false | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[CreateChannel]]
== Create Channel
`<microsoftTeams:create-channel>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `Channel.Create` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `Channel.Create.Group, Channel.Create, Teamwork.Migrate.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Team Id where the channel should be created |  | *x*{nbsp}
| Attributes a| Object |  Information regarding the channel to be created |  #[payload] | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[CreateMessage]]
== Create Message
`<microsoftTeams:create-message>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `ChannelMessage.Send` 
|Delegated (personal Microsoft account) | Not supported. 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Team Id where the channel is present |  | *x*{nbsp}
| Channel id a| String |  Channel Id where the message should be published |  | *x*{nbsp}
| Message a| Object |  The message to be published |  #[payload] | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[CreateTeam]]
== Create Team
`<microsoftTeams:create-team>`


[%header%autowidth.spread] ]
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `Team.Create` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `Team.Create, Teamwork.Migrate.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Attributes a| Object |  Information regarding the team to be created |  #[payload] | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[DeleteChannel]]
== Delete Channel
`<microsoftTeams:delete-channel>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `Channel.Delete.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `Channel.Delete.All, Channel.Delete.Group`
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Team Id where the channel is present |  | *x*{nbsp}
| Channel id a| String |  Channel id to be deleted |  | *x*{nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[DeleteTeam]]
== Delete Team
`<microsoftTeams:delete-team>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `Group.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `Group.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team Id a| String |  Team id to be removed |  | *x*{nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[GetChannel]]
== Get Channel
`<microsoftTeams:get-channel>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `Channel.ReadBasic.All, ChannelSettings.Read.All, ChannelSettings.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `ChannelSettings.Read.Group, ChannelSettings.ReadWrite.Group, Channel.ReadBasic.All, ChannelSettings.Read.All, ChannelSettings.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Team Id where the channel is present |  | *x*{nbsp}
| Channel id a| String |  Channel Id to be retrieved |  | *x*{nbsp}
| Select a| String |  Properties to be retrieved in the response |   | {nbsp}
| Expand a| String |  The response will include information regarding the specified relationship |   | {nbsp}
| Filter a| String |  Use the filter query parameter to retrieve just a subset of a collection. |   | {nbsp}
| Advanced Query Params a| Object |  |  | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[GetTeam]]
== Get Team
`<microsoftTeams:get-team>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `Team.ReadBasic.All, TeamSettings.Read.All, TeamSettings.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `TeamSettings.Read.Group, TeamSettings.ReadWrite.Group, Team.ReadBasic.All, TeamSettings.Read.All, TeamSettings.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Team Id to be retrieved |  | *x*{nbsp}
| Select a| String |  Properties to be retrieved in the response |   | {nbsp}
| Expand a| String |  The response will include information regarding the specified relationship |   | {nbsp}
| Advanced Query Params a| Object |  |  | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[ListChannelMembers]]
== List Channel Members
`<microsoftTeams:list-channel-members>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `ChannelMember.Read.All, ChannelMember.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `ChannelMember.Read.All, ChannelMember.ReadWrite.All`
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team Id a| String |  Team Id where the channel is present |  | *x*{nbsp}
| Channel Id a| String |  Channel Id to list its members |  | *x*{nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[ListChannels]]
== List Channels
`<microsoftTeams:list-channels>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `Channel.ReadBasic.All, ChannelSettings.Read.All, ChannelSettings.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `ChannelSettings.Read.Group, ChannelSettings.ReadWrite.Group, Channel.ReadBasic.All, ChannelSettings.Read.All, ChannelSettings.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team Id a| String |  Team Id to list its channels |  | *x*{nbsp}
| Select a| String |  Properties to be retrieved in the response |   | {nbsp}
| Filter a| String |  Use the filter query parameter to retrieve just a subset of a collection. |   | {nbsp}
| Advanced Query Params a| Object |  |  | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[ListGroupMembers]]
== List Group Members
`<microsoftTeams:list-group-members>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `GroupMember.Read.All, Group.Read.All, GroupMember.ReadWrite.All, Group.ReadWrite.All, Directory.Read.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `GroupMember.Read.All, Group.Read.All, GroupMember.ReadWrite.All, Group.ReadWrite.All, Directory.Read.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Group Id a| String |  Group id to list its members |  | *x*{nbsp}
| Select a| String |  Properties to be retrieved in the response |   | {nbsp}
| Expand a| String |  The response will include information regarding the specified relationship |   | {nbsp}
| Filter a| String |  Use the filter query parameter to retrieve just a subset of a collection. |   | {nbsp}
| Order By a| String |  Use the orderby parameter to specify the sort order of the items returned |   | {nbsp}
| Search a| String |  Use the search parameter to restrict the results of a request to match a search criterion |   | {nbsp}
| Skip a| Number |  Use the skip parameter to set the number of items to skip at the start of a collection. |  | {nbsp}
| Top a| Number |  Use the top query parameter to specify the page size of the result set. |  | {nbsp}
| Count a| Boolean |  Retrieves the total count of matching resources. |  false | {nbsp}
| Advanced Query Params a| Object |  |  | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Array of Object
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[ListTeamMembers]]
== List Team Members
`<microsoftTeams:list-team-members>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `TeamMember.Read.All, TeamMember.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `TeamMember.Read.Group, TeamMember.Read.All, TeamMember.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Team Id to list its members |  | *x*{nbsp}
| Select a| String |  Properties to be retrieved in the response |   | {nbsp}
| Filter a| String |  |  | {nbsp}
| Advanced Query Params a| Object |  |  | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behaviour |  | {nbsp}
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  | {nbsp}
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Binary
| *Attributes Type* a| Binary
|===

=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[RemoveChannelMember]]
== Remove Channel Member
`<microsoftTeams:remove-channel-member>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged)
|Delegated (work or school account) | `ChannelMember.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `ChannelMember.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team Id a| String |  Team Id where the channel is present |  | *x*{nbsp}
| Channel Id a| String |  Channel Id that contains the member to be removed |  | *x*{nbsp}
| Membership Id a| String |  The id of the member to be deleted |  | *x*{nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[RemoveGroupMember]]
== Remove Group Member
`<microsoftTeams:remove-group-member>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `GroupMember.ReadWrite.All, Group.ReadWrite.All, Directory.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `GroupMember.ReadWrite.All, Group.ReadWrite.All, Directory.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Group Id a| String |  Group id where the member to be removed is present |  | *x*{nbsp}
| Member Id a| String |  User id that is member in this group |  | *x*{nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[RemoveTeamMember]]
== Remove Team Member
`<microsoftTeams:remove-team-member>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `TeamMember.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `TeamMember.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Team Id that contains the member to be removed |  | *x*{nbsp}
| Membership Id a| String |  The id of the member to be removed |  | *x*{nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[Unauthorize]]
== Unauthorize
`<microsoftTeams:unauthorize>`


Deletes all the access token information of a given resource owner id so that it's impossible to execute any operation for that user without doing the authorization dance again


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Resource Owner Id a| String |  The id of the resource owner which access should be invalidated |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}



[[UpdateChannel]]
== Update Channel
`<microsoftTeams:update-channel>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `ChannelSettings.ReadWrite.All,` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `ChannelSettings.ReadWrite.Group, ChannelSettings.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team Id a| String |  Team Id where the channel is present |  | *x*{nbsp}
| Channel Id a| String |  Channel Id to be updated |  | *x*{nbsp}
| Attributes a| Object |  Information regarding the channel to be updated |  #[payload] | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}


[[UpdateTeam]]
== Update Team
`<microsoftTeams:update-team>`


[%header%autowidth.spread] 
|=== 
|Permission Type |Permissions (from least to most privileged) 
|Delegated (work or school account) | `TeamSettings.ReadWrite.All` 
|Delegated (personal Microsoft account) | Not supported. 
|Application | `TeamSettings.ReadWrite.Group, TeamSettings.ReadWrite.All` 
|===


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*{nbsp}
| Team id a| String |  Id of the team to be updated |  | *x*{nbsp}
| Attributes a| Object |  Information to be updated |  #[payload] | {nbsp}
| Read Timeout a| Number |  Read timeout value. |  | {nbsp}
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit value used by the read timeout. |  | {nbsp}
| Config Ref a| ConfigurationProvider |  The name of the configuration to be used to execute this component |  | *x*{nbsp}
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | {nbsp}
|===


=== For Configurations

* <<AuthorizationCodeConfig>> {nbsp}
* <<ClientCredentialsConfig>> {nbsp}

=== Throws

* MICROSOFTTEAMS:BAD_REQUEST {nbsp}
* MICROSOFTTEAMS:CONNECTIVITY {nbsp}
* MICROSOFTTEAMS:FORBIDDEN {nbsp}
* MICROSOFTTEAMS:INVALID_CONNECTION {nbsp}
* MICROSOFTTEAMS:INVALID_CREDENTIALS {nbsp}
* MICROSOFTTEAMS:NOT_FOUND {nbsp}
* MICROSOFTTEAMS:RETRY_EXHAUSTED {nbsp}
* MICROSOFTTEAMS:SERVER_ERROR {nbsp}
* MICROSOFTTEAMS:TIMEOUT {nbsp}



== Types
[[ProxyConfiguration]]
=== Proxy Configuration

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests will be sent. |  | x
| Port a| Number | Port where the proxy requests will be sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  | 
| Password a| String | The password to authenticate against the proxy. |  | 
|======================

[[Tls]]
=== Tls

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> |  |  | 
| Key Store a| <<KeyStore>> |  |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  | 
|======================

[[TrustStore]]
=== Trust Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  | 
| Password a| String | The password used to protect the trust store. |  | 
| Type a| String | The type of store used. |  | 
| Algorithm a| String | The algorithm used by the trust store. |  | 
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  | 
|======================

[[KeyStore]]
=== Key Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  | 
| Type a| String | The type of store used. |  | 
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  | 
| Key Password a| String | The password used to protect the private key. |  | 
| Password a| String | The password used to protect the key store. |  | 
| Algorithm a| String | The algorithm used by the key store. |  | 
|======================

[[StandardRevocationCheck]]
=== Standard Revocation Check

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  | 
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  | 
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  | 
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  | 
|======================

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  | 
|======================

[[CrlFile]]
=== Crl File

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  | 
|======================

[[Reconnection]]
=== Reconnection

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use |  | 
|======================

[[Reconnect]]
=== Reconnect

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in ms) to reconnect |  | 
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread |  | 
| Count a| Number | How many reconnection attempts to make |  | 
|======================

[[ReconnectForever]]
=== Reconnect Forever

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often (in ms) to reconnect |  | 
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread |  | 
|======================

[[ExpirationPolicy]]
=== Expiration Policy

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  | 
|======================

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of memory that will be allocated in order to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then it will be expanded by according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  | 
| Buffer Size Increment a| Number | This is by how much will be buffer size by expanded if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  | 
|======================

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  | 
|======================

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of instances that will be initially be allowed to be kept in memory in order to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then it will be expanded according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  | 
| Buffer Size Increment a| Number | This is by how much will the buffer size by expanded if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. Default value is 100 instances. |  | 
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  | 
|======================

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | This is the maximum amount of instances that will be kept in memory. If more than that is required, then it will start to buffer the content on disk. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  | 
|======================

